--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mova",
   "main": "./index.js",
-  "version": "5.20.0",
+  "version": "5.20.1",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
@@ -78,5 +78,6 @@
     "ts-jest": "^29.4.6",
     "typescript": "~5.9.2"
   },
-  "private": true
+  "private": true,
+  "buildNumber": "2"
 }
